--- a/lesson.html
+++ b/lesson.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url" content="https://A-NaG-57.github.io/lesson_1/lesson_1.html" />
+    <meta property="og:url" content="https://A-NaG-57.github.io/lesson_1/lesson.html" />
     <meta property="og:title" content="話題ルーレット" />
     <meta property="og:description" content="3月の課題で作成した話題ルーレットです。" />
-    <link rel="stylesheet" href="lesson_1.css">
+    <link rel="stylesheet" href="lesson.css">
     <title>A-NaG-57が作った話題ルーレット</title>
 </head>
 <body>
@@ -18,6 +18,6 @@
     <button id="start">スタート</button>
     <button id="stop">ストップ</button>
     <div id="result-area"></div>
-    <script src="lesson_1.js"></script>
+    <script src="lesson.js"></script>
 </body>
 </html>
