--- a/lesson.html
+++ b/lesson.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url" content="https://A-NaG-57.github.io/lesson_1/lesson.html" />
+    <meta property="og:url" content="https://A-NaG-57.github.io/lesson/lesson.html" />
     <meta property="og:title" content="話題ルーレット" />
     <meta property="og:description" content="3月の課題で作成した話題ルーレットです。" />
     <link rel="stylesheet" href="lesson.css">
