--- a/lesson.html
+++ b/lesson.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:url" content="https://A-NaG-57.github.io/lesson/lesson.html" />
     <meta property="og:title" content="話題ルーレット" />
-    <meta property="og:description" content="3月の課題で作成した話題ルーレットです。" />
+    <meta property="og:description" content="課題で作成した話題ルーレットです" />
     <link rel="stylesheet" href="lesson.css">
     <title>A-NaG-57が作った話題ルーレット</title>
 </head>
 <body>
-    <h1>交流会などで使える話題ルーレットです。</h1>
-    <p>スタートを押してルーレットを回してください。<b>
+    <h1>交流会などで使える話題ルーレットです</h1>
+    <p>スタートを押してルーレットを回してください。<br>
         スタートしたら、ストップボタンでルーレットを止めてください。
-    </b>
+    </br>
     </p>
     <button id="start">スタート</button>
     <button id="stop">ストップ</button>
