文言の修正

--- a/lesson.html
+++ b/lesson.html
@@ -10,9 +10,9 @@
     <title>A-NaG-57が作った話題ルーレット</title>
 </head>
 <body>
-    <h1>交流会などで使える話題ルーレットです</h1>
-    <p>スタートを押してルーレットを回してください。<br>
-        スタートしたら、ストップボタンでルーレットを止めてください。
+    <h1>話題ルーレット</h1>
+    <p>交流会などで使用できる話題提供用のルーレットです。<br>
+        アイスブレイクや自己紹介の代わりにも是非活用してください。
     </br>
     </p>
     <button id="start">スタート</button>
