--- a/lesson.html
+++ b/lesson.html
@@ -15,8 +15,8 @@
         アイスブレイクや自己紹介の代わりにも是非活用してください。
     </br>
     </p>
-    <button id="start">スタート</button>
-    <button id="stop">ストップ</button>
+    <button type="button" id="start">スタート</button>
+    <button typr="button" id="stop">ストップ</button>
     <div id="result-area"></div>
     <script src="lesson.js"></script>
 </body>
