--- a/lesson.html
+++ b/lesson.html
@@ -15,8 +15,8 @@
         アイスブレイクや自己紹介の代わりにも是非活用してください。
     </br>
     </p>
-    <button type="button" id="start_button" onclick="start_button();">スタート</button>
-    <button typr="button" id="stop_button" onclick="stop_button();">ストップ</button>
+    <button type="button" id="start_button" onclick="start_function();">スタート</button>
+    <button typr="button" id="stop_button" onclick="stop_function();">ストップ</button>
     <div id="result-area"></div>
     <script src="lesson.js"></script>
 </body>
