--- a/lesson.html
+++ b/lesson.html
@@ -18,6 +18,7 @@
     <button type="button" id="start_button" value="クリック" onclick="start_function();">スタート</button>
     <button typr="button" id="stop_button" value="クリック" onclick="stop_function();">ストップ</button>
     <div id="result-area"></div>
-    <script src="lesson.js"></script>
+    <script src="lesson.js">
+</script>
 </body>
 </html>
