--- a/lesson.html
+++ b/lesson.html
@@ -17,6 +17,7 @@
     </p>
     <button type="button" id="start_button" value="クリック" onclick="start_function();">スタート</button>
     <button typr="button" id="stop_button" value="クリック" onclick="stop_function();">ストップ</button>
+    <div id="roulette-area"></div>
     <div id="result-area"></div>
     <script src="lesson.js">
 </script>
