--- a/roulette.html
+++ b/roulette.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url" content="https://A-NaG-57.github.io/lesson/lesson.html" />
+    <meta property="og:url" content="https://A-NaG-57.github.io/roulette/roulette.html" />
     <meta property="og:title" content="話題ルーレット" />
     <meta property="og:description" content="課題で作成した話題ルーレットです" />
-    <link rel="stylesheet" href="lesson.css">
+    <link rel="stylesheet" href="roulette.css">
     <title>A-NaG-57が作った話題ルーレット</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
     <button typr="button" id="stop_button" value="クリック" onclick="stop_function();">ストップ</button>
     <div id="roulette-area"></div>
     <div id="result-area"></div>
-    <script src="lesson.js">
+    <script src="roulette.js">
 </script>
 </body>
 </html>
